<resources>
    <!--.App name................................................................................-->
    <string name="app_name">project3</string>
    <!--.Questions...............................................................................-->
    <string name="question1">What is the preferred unit of measurement for text size in Android ?</string>
    <string name="question2">Which layouts has attribute android:orientation ?</string>
    <string name="question3">What is the name of images resource folder on Android project?</string>
    <string name="question4">What is the name of ImageView attribute that lets to crop the image?</string>
    <string name="question5">What is the name of a class that is used to display information for a short period of time?</string>
    <string name="question6">What will this function print to logcat?</string>
    <string name="question7">What will this function print to logcat?</string>
    <string name="question8">What is the keyword used for class inheritance in Java?</string>
    <string name="question9">An object that provides runtime binding between separate components, such as two activities.</string>
    <string name="question10">What is APK in android?</string>
    <!--.Answers.................................................................................-->
    <string name="answer1.1">sp</string>
    <string name="answer1.2">dp</string>
    <string name="answer1.3">px</string>
    <string name="answer1.4">pt</string>
    <!--.........................................................................................-->
    <string name="answer2.1">LinearLayout</string>
    <string name="answer2.2">WebView</string>
    <string name="answer2.3">RelativeLayout</string>
    <string name="answer2.4">TableLayout</string>
    <!--.........................................................................................-->
    <string name="answer3.1">Pictures</string>
    <string name="answer3.2">Drawable</string>
    <string name="answer3.3">Wallpapers</string>
    <string name="answer3.4">Images</string>
    <!--.........................................................................................-->
    <string name="answer4.1">android:scaleType</string>
    <string name="answer4.2">android:cropType</string>
    <string name="answer4.3">android:cropStyle</string>
    <string name="answer4.4">android:imgRatio</string>
    <!--.........................................................................................-->
    <string name="answer5.1">Notification</string>
    <string name="answer5.2">Message</string>
    <string name="answer5.3">Toast</string>
    <string name="answer5.4">None of these</string>
    <!--.........................................................................................-->
    <string name="answer6.1">1</string>
    <string name="answer6.2">0</string>
    <string name="answer6.3">Exception will be thrown</string>
    <string name="answer6.4">It will not compile</string>
    <!--.........................................................................................-->
    <string name="answer7.1">2</string>
    <string name="answer7.2">1</string>
    <string name="answer7.3">3</string>
    <string name="answer7.4">It will not compile</string>
    <!--.........................................................................................-->
    <string name="answer8.1">Inherit</string>
    <string name="answer8.2">Implement</string>
    <string name="answer8.3">Extends</string>
    <string name="answer8.4">None of above</string>
    <!--.........................................................................................-->
    <string name="correctAnswer9">Intent</string>
    <!--.........................................................................................-->
    <string name="answer10.1">Android packages kingdom</string>
    <string name="answer10.2">Android packages kitchen </string>
    <string name="answer10.3">Android packaging kit</string>
    <string name="answer10.4">None of the above</string>
    <!--.........................................................................................-->
    <!--.Strings for TextViews and Buttons.......................................................-->
    <string name="welcomeMSG">How much do you know about </string>
    <string name="welcomeMSG2">Android developing?</string>
    <string name="startBTN">Start quizz!</string>
    <string name="hintStart">Enter your name</string>
    <string name="finishQuiz">Finish quiz</string>
    <string name="prevQuestion">Previous question</string>
    <string name="nextQuestion">Next question</string>
    <string name="toMenu">Back to menu</string>
    <string name="share">Share score</string>
    <string name="questionNumber">Question nr. : </string>
    <string name="enterAnswer">Enter your answer here</string>
    <string name="points"> Points</string>
    <!--.........................................................................................-->
    <!--.Toasts.......................................................-->
    <string name="checkAnswer">Please, check atleast one answer !</string>
    <string name="insertAnswer">Please insert an answer !</string>
    <string name="cantAllOptions">You can\'t select all the options !</string>
    <string name="youScored">You have scored :</string>
    <string name="firstEnterName">First enter your name</string>
    <string name="goodLuck">Good luck</string>
    <!--.........................................................................................-->
    <!--.Final score texts.......................................................................-->
    <string name="finalHigh">You are the SUPERMAN of Android Developing !</string>
    <string name="finalMed">You are certainly not a newbie, but there are some things you need to learn</string>
    <string name="finalLow">There is a lot of things you need to learn about Android Development, but dont be sad, you will do better next time !</string>
    <string name="checkMyScore">Checkout my Android Development quiz score !</string>
    <string name="emailMyScore">I have scored</string>
    <!--.........................................................................................-->
</resources>
