<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollViewMainActivity"
    tools:context="com.example.android.project3.MainActivity">

    <LinearLayout style="@style/mainActivityParentLinearL">

        <ImageView style="@style/imageMainActivity" />

        <TextView
            style="@style/textMainActivity"
            android:paddingTop="@dimen/paddingTopWelcomeMSG1"
            android:text="@string/welcomeMSG"
            />

        <TextView
            style="@style/textMainActivity"
            android:paddingBottom="@dimen/paddingBotWelcomeMSG2"
            android:text="@string/welcomeMSG2"
            />

        <LinearLayout
            style="@style/mainActivityChildLinearL">

            <EditText
                style="@style/editTextMainActivity"
                android:id="@+id/enterName"/>

            <Button
                android:id="@+id/startQuizz"
                android:onClick="startQuizz"
                android:text="@string/startBTN"
                style="@style/buttonMainActivity"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
